# Chihiro

./: .gitignore  LICENSE  Pipfile  README.md  docker-compose.yml
ChihiroSearch/: README.md  manage.py
ChihiroSearch/ChihiroSearch/: settings.py  urls.py  wsgi.py
ChihiroSearch/search/: models.py  views.py
ChihiroSearch/templates/: index.html  result.html
ChihiroSpider/: README.md  pyproject.toml  scrapy.cfg
ChihiroSpider/ChihiroSpider/: SpiderTest.py  items.py  middlewares.py  pipelines.py  settings.py
ChihiroSpider/ChihiroSpider/models/: es_types.py
ChihiroSpider/ChihiroSpider/spiders/: JianshuSpider.py
